--- a/views/home.pug
+++ b/views/home.pug
@@ -1,6 +1,4 @@
-html
-  head
-    title= title
-  body
-    h1= message
-    img(src='logo.jpeg')
+extends template/layout.pug 
+
+block content 
+    .container Hola
