--- a/views/home.pug
+++ b/views/home.pug
@@ -1,4 +1,16 @@
+
 extends template/layout.pug 
 
 block content 
-    .container Hola
+    .container.justify-content-between 
+        div(id="fetch_container", onload="loadMovies()")
+
+block scripts 
+    script.
+        function loadMovies()
+        {
+            var container = document.getElementById("fetch-container");
+            container.innerHTML += "Hola";
+            alert(1);
+            console.log("Funcion cargada");
+        }
