Migrated to MongoDB, added a new Model for users

--- a/views/login.pug
+++ b/views/login.pug
@@ -11,8 +11,8 @@ block content
                     .card.px-1.py-5 
                         .form-data 
                             .forms-inputs.mb-4
-                                span Email or username 
-                                input.form-control(type="email", name="username")
+                                span Username 
+                                input.form-control(type="", name="username")
                             .forms-inputs.mb-4 
                                 span Password 
                                 input.form-control(type="password",name="password")
