--- a/views/register.pug
+++ b/views/register.pug
@@ -11,8 +11,11 @@ block content
                     .card.px-1.py-5 
                         .form-data 
                             .forms-inputs.mb-4
-                                span Email or username 
-                                input.form-control(type="email", name="username")
+                                span Email
+                                input.form-control(type="email", name="email")
+                            .forms-inputs.mb-4
+                                span Username 
+                                input.form-control(type="", name="username")
                             .forms-inputs.mb-4 
                                 span Password 
                                 input.form-control(type="password",name="password")
