Login validation completed

--- a/views/login.pug
+++ b/views/login.pug
@@ -11,7 +11,7 @@ block content
                     .card.px-1.py-5 
                         .form-data 
                             .forms-inputs.mb-4
-                                span Username 
+                                span Email 
                                 input.form-control(type="", name="username")
                             .forms-inputs.mb-4 
                                 span Password 
