--- a/views/register.pug
+++ b/views/register.pug
@@ -20,7 +20,7 @@ block content
                                 span Password 
                                 input.form-control(type="password",name="password")
                             .mb-1.mr-4.ml-4 
-                                button.btn.btn-block Login
+                                button.btn.btn-block Register
                             .forms-inputs.mb-4.mt-3.ml-2.text-black
-                                a(href="/register") Register new account
+                                a(href="/login") Go to login
                         
