--- a/views/template/layout.pug
+++ b/views/template/layout.pug
@@ -3,7 +3,7 @@ html
     title= title
     link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous")
     block custom_css
-  body
+  body(style="background: #24292e;")
     div.nav.p-2.d-flex.w-100.justify-content-between(style="background: #000000; height : 75px;")
         table.lead.text-white.w-50
             tr
@@ -35,7 +35,12 @@ html
 
 
     ul.nav.p-2.d-flex.w-100.justify-content-between(style="background: #ffffff; height=170px")
-        li.nav-item.mt-3 
+
+        if !currentUser
+            li.nav-item.mt-3 
+        else 
+            li.nav-item.mt-3(style="color:blue") Bienvenido, #{currentUser}
+        
 
         li.nav-item.mt-3
             form(action="/search" method="post")
