Text color change

--- a/views/catalogo.pug
+++ b/views/catalogo.pug
@@ -2,7 +2,7 @@ extends template/layout.pug
 
 block content 
     if isLoggedIn
-        table.table.table-striped 
+        table.table.table-striped.primary.text-white
             tr 
                 th Title 
                 th VoteCount 
