--- a/views/template/layout.pug
+++ b/views/template/layout.pug
@@ -2,6 +2,8 @@ html
   head
     title= title
     link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous")
+    link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css")
+    link(rel="stylesheet", href="css/common.css")
     block custom_css
   body(style="background: #24292e;")
     div.nav.p-2.d-flex.w-100.justify-content-between(style="background: #000000; height : 75px;")
@@ -34,7 +36,7 @@ html
 
 
 
-    ul.nav.p-2.d-flex.w-100.justify-content-between(style="background: #ffffff; height=170px")
+    ul.nav.p-2.d-flex.w-100.justify-content-between(style="background: #000000; height=170px")
 
         if !currentUser
             li.nav-item.mt-3 
