--- a/views/home.pug
+++ b/views/home.pug
@@ -2,20 +2,30 @@
 extends template/layout.pug 
 
 block content 
-    .container.justify-content-between.bg-secondary
-        div#fetch_container            
-            .row.justify-content-center
-                .col-12.ml-5.mt-4
-                    p En cartelera
-                    //- p #{message}
-                    //- p #{!!isLoggedIn}
-                    hr
+    //- .container.justify-content-between.bg-secondary
+    .main_container
+        .d-flex.flex-columns
+            .col-2.ml-5
+                p.text-white.font-weight-bold.mb-0 Cine
+
+            .col-4.d-flex
+                p.text-white.mr-3.mb-0 VIP Galerias, Guadalajara
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="white" class="bi bi-pen" viewBox="0 0 16 16">
+                    <path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001zm-.644.766a.5.5 0 0 0-.707 0L1.95 11.756l-.764 3.057 3.057-.764L14.44 3.854a.5.5 0 0 0 0-.708l-1.585-1.585z"/>
+                </svg>                    
+
+        hr.bg-white.text-white.m-1.w-25
+            //- .col-6.ml-5
+
+        #main_movie_container.m-5   
+            img.rounded.pb-5(src=imgPath+first_movie_bg_main.poster_path, alt=first_movie_bg_main.title, style="width:150")
             
+        #movies_container
             .row.justify-content-center
                 each movie in loadedMovies
                     .col-auto.m-2.mb-5.text-center
                         a(href=`/pelicula/${movie.id}`)
-                            img.rounded(src=imgPath+movie.poster_path, alt=movie.title, style={width:150})
+                            img.rounded(src=imgPath+movie.poster_path, alt=movie.title, style="width:150")
                             //- p #{movie.title}
 
 
