Admin/usuarios POST Controller. No finished yet

--- a/views/login.pug
+++ b/views/login.pug
@@ -12,7 +12,7 @@ block content
                         .form-data 
                             .forms-inputs.mb-4
                                 span Email 
-                                input.form-control(type="", name="username")
+                                input.form-control(type="text", name="username")
                             .forms-inputs.mb-4 
                                 span Password 
                                 input.form-control(type="password",name="password")
