--- a/views/admin.pug
+++ b/views/admin.pug
@@ -30,28 +30,32 @@ block content
                                 td #{val.username}
                                 td #{val.password} 
                                 td #{val.admin}
-                                td.text-center 
-                                    button.btn.btn-success Edit
-                        
-                    .container(style="text-align:center")
+                                td.text-center
+                                    button.btn.btn-success.m-0.mr-3(name="btn-edit") Edit
+                                    button.btn.btn-danger.m-0(name="btn-delete") Delete
+                    //- Nuevo usuario form
+                    .container(style="text-align:right")
                         h4 Add new user
                         form.form-control.text-dark(method="POST")
                             .form-group.row.mt-4
                                 label.col-sm-4(for="") Register email:  
-                                input(type="text")
+                                input(type="email", name="email")
                             .form-group.row
                                 label.col-sm-4(for="") Username:  
-                                input(type="text")
+                                input(type="text", name="username")
                             .form-group.row
                                 label.col-sm-4(for="") Password:  
-                                input(type="text")   
+                                input(type="password", name="password")
                             .form-group.row
                                 label.col-sm-4(for="") Admin Status 
-                                select
-                                    option True 
-                                    option False      
+                                select(name="admin_status")
+                                    option(value="true") True 
+                                    option(value="false") False      
+                            .form-group-row
+                                p.error.text-danger.text-center(style=`${error?'display:block':'display:none'}`) Error
                             .form-group-row 
-                                button.btn-block.btn Load user                   
+                                button.btn-block.btn(type='submit') Load user
+                                   
                 else if table == "funciones"
                     h2(style="color:white") Funciones
                     .container(style="text-align:center")
