--- a/views/register.pug
+++ b/views/register.pug
@@ -15,7 +15,7 @@ block content
                                 input.form-control(type="email", name="email")
                             .forms-inputs.mb-4
                                 span Username 
-                                input.form-control(type="", name="username")
+                                input.form-control(type="text", name="username")
                             .forms-inputs.mb-4 
                                 span Password 
                                 input.form-control(type="password",name="password")
