One doc.pug for each view displayed in admin.pug

--- a/views/admin.pug
+++ b/views/admin.pug
@@ -1,96 +1,17 @@
-extends template/layout.pug
+extends template/admin_sideBar.pug
 
-block content
-    if !isAdmin 
-        .container.mr-0.ml-0.justify-content-between.d-flex.flex-row.h-100 
-            .container.mr-0.ml-0.w-25.border-right.h100(style="color:white")
-                p.h4.border-bottom Administrar
-                p 
-                    a(href="boletos") Boletos
-                p 
-                    a(href="usuarios") Usuarios
-                p 
-                    a(href="funciones") Funciones
-            .container.mr-0.ml-0(style="color:white")
-                if table == "boletos"
-                    h2(style="color:white") Boletos
-                else if table == "usuarios"
-                    h2(style="color:white;text-align:center") Usuarios
-                    table.table-users.table.table-bordered.m-4(style="color:white")
-                        tr
-                            td Email 
-                            td Username
-                            td Password
-                            td Admin
-                            td Actions
-                        tr
-                        each val,key in data 
-                            tr(style="text-align:center" id=val.email)
-                                td #{val.email}
-                                td #{val.username}
-                                td #{val.password} 
-                                td #{val.admin}
-                                td.text-center
-                                    button.btn.btn-danger.m-0(name="btn-delete" value=val._id) Delete
-                    button#btn-add-admin-user.btn.btn-secondary.ml-4 Add new user
-                    //- Should appear when the button is clicked
-                    //- Nuevo usuario admin form
-                    .container.m-4#container-add-admin(style="text-align:right; display:none")
-                        form.form-control.text-secondary(method="POST")
-                            div.d-flex.justify-content-end
-                                button#add-admin-close-btn.btn.text-center(style="cursor:pointer;") Close
-                                
-                            .form-group.row.mt-4
-                                label.col-sm-4(for="") Register email:  
-                                input(type="email", name="email")
-                            .form-group.row
-                                label.col-sm-4(for="") Username:  
-                                input(type="text", name="username")
-                            .form-group.row
-                                label.col-sm-4(for="") Password:  
-                                input(type="password", name="password")
-                            .form-group.row
-                                label.col-sm-4(for="") Admin Status 
-                                select(name="admin_status")
-                                    option(value="true") True 
-                                    option(value="false") False      
-                            .form-group-row
-                                p.error.text-danger.text-center(style=`${error?'display:block':'display:none'}`) #{error}
-                            .form-group-row 
-                                button.btn-block.btn(type='submit') Load user
-                                   
-                else if table == "funciones"
-                    h2(style="color:white") Funciones
-                    .container(style="text-align:center")
-                        h4 Añadir función
-                        form.form-control.text-dark(method="POST")
-                            #funcion(style="border-bottom:solid 1px")
-                                .h4 Datos de la funcion
-                                .form-group.row.mt-4
-                                    label.col-sm-4(for="") Movie ID:  
-                                    input(type="text" name="movie_id" pattern="[0-9]+")
-                                .form-group.row
-                                    label.col-sm-4 ID de cine
-                                    select(name="cine_id")
-                                        option 1
-                                        option 2
-                                        option 3 
-                                .form-group.row
-                                    label.col-sm-4(for="") Hora  
-                                    input(type="datetime-local", name="datetime")
-                            #new-cards-container 
-                            
-                            .form-group
-                                button.btn-block.btn#add-func Añadir  
-                                button.btn-block.btn.btn-warning Submit   
-                else 
-                    h2(style="color:white") Dashboard
+block admin_content
+    if table == "boletos"
+        include admin/boletosContainer.pug
 
-    else 
-        .container 
-            .h3(style="color:red") Forbidden
+    else if table == "usuarios"
+        include admin/usuariosContainer.pug
 
-block scripts 
-    if !isAdmin 
-        script(src="js/dashboard.js") 
-        
+    else if table == "funciones"
+        include admin/funcionesContainer.pug
+
+    else if table == "cines"
+        include admin/cinesContainer.pug
+                
+    else
+        h2(style="color:white") Dashboard
