cines and salas page added / models methods added
Avance. Con funcionalidades inconclusas todavía.

--- a/views/admin.pug
+++ b/views/admin.pug
@@ -12,6 +12,9 @@ block admin_content
 
     else if table == "cines"
         include admin/cinesContainer.pug
+
+    else if table == "salas"
+        include admin/salasContainer.pug
                 
     else
         h2(style="color:white") Dashboard
