--- a/views/admin/cinesContainer.pug
+++ b/views/admin/cinesContainer.pug
@@ -1,3 +1,31 @@
 
 h2(style="color:white") Cines <small>- Sucursales</small>
 .container(style="text-align:center")
+
+form(action="" method="POST" name="cinenuevo").form
+    .container(style="width:500px")
+        .row
+            .col
+                label(for="") Nombre del cine:
+            .col 
+                input(type="text", name="nombre").w-100
+        .row
+            .col
+                label(for="") Ubicacion: 
+            .col
+                input(type="text", name="ubicacion").w-100
+        .row
+            .col
+                label(for="") Numero de salas: 
+            .col
+                select(name="salas").w-100
+                    option(value="1") 1
+                    option(value="2") 2
+                    option(value="3") 3
+                    option(value="4") 4
+                    option(value="5") 5
+                    option(value="6") 6    
+        .row
+            .col
+               button.btn.btn-block.btn-info Submit
+
