--- a/views/template/admin_sideBar.pug
+++ b/views/template/admin_sideBar.pug
@@ -13,6 +13,8 @@ block content
                     a(href="funciones") Funciones
                 p 
                     a(href="cines") Cines
+                p 
+                    a(href="salas") Salas
 
             .container.mr-0.ml-0(style="color:white")
                 block admin_content
